# api/models/order.go
@@ -1,17 +1,18 @@
 package models
 
 type Order struct {
-	OrderId      int       `json:"order_id"`
-	CustomerId   int       `json:"customer_id"`
-	CustomerData *Customer `json:"customer_data"`
-	OrderStatus  int16     `json:"order_status"`
-	OrderDate    string    `json:"order_date"`
-	RequiredDate string    `json:"required_date"`
-	ShippedDate  string    `json:"shipped_date"`
-	StoreId      int       `json:"store_id"`
-	StoreData    *Store    `json:"store_data"`
-	StaffId      int       `json:"staff_id"`
-	StaffData    *Staff    `json:"staff_data"`
+	OrderId      int          `json:"order_id"`
+	CustomerId   int          `json:"customer_id"`
+	CustomerData *Customer    `json:"customer_data"`
+	OrderStatus  int16        `json:"order_status"`
+	OrderDate    string       `json:"order_date"`
+	RequiredDate string       `json:"required_date"`
+	ShippedDate  string       `json:"shipped_date"`
+	StoreId      int          `json:"store_id"`
+	StoreData    *Store       `json:"store_data"`
+	StaffId      int          `json:"staff_id"`
+	StaffData    *Staff       `json:"staff_data"`
+	OrderItems   []*OrderItem `json:"order_items"`
 }
 
 type OrderPrimaryKey struct {
@@ -67,10 +68,10 @@ type OrderItemPrimaryKey struct {
 }
 
 type CreateOrderItem struct {
-	// OrderId     int     `json:"order_id"`
+	OrderId int `json:"order_id"`
 	// ItemId      int     `json:"item_id"`
 	ProductId   int      `json:"product_id"`
-	ProductData *Product `json:"product_data"`
+	// ProductData *Product `json:"product_data"`
 	Quantity    int      `json:"quantity"`
 	ListPrice   float64  `json:"list_price"`
 	Discount    float64  `json:"discount"`
